Fix broken background when overflowing

--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -1,10 +1,6 @@
 .container {
   width: 100%;
   height: 100%;
-  background: asset-url('sign_in_bg.jpg');
-  background-position: center;
-  background-size: cover;
-  position: relative;
 }
 
 .container>* {
@@ -18,9 +14,10 @@ tb-sign-in {
 }
 
 .photo-credit {
-  position: absolute;
+  position: fixed;
   bottom: 15px;
   left: 15px;
   color: rgba(255, 255, 255, 0.8);
   font-size: 12px;
+  z-index: -1;
 }
